<resources>
    <string name="app_name">Abcdefg</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">No Account?</string>
    <string name="register_account_now">Register Account Now</string>
    <string name="greeting">Welcome to Abcdefg, places that make study easy and fun!</string>
    <string name="sign_up">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer_group_list">Open Group List Drawer</string>
    <string name="close_drawer_group_list">Close Group List Drawer</string>
    <string name="registerTitle">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="computer_science">Computer Science</string>
    <string name="business">Business</string>
    <string name="building_environment">Building Environment</string>
    <string name="art">Art</string>
    <string name="communication">Communication</string>
    <string name="interest">Interest :</string>
    <string name="plus">+</string>
    <string name="social_science">Social Science</string>
    <string name="btn_create_group">Create Group</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="joined_events">Joined Events</string>
    <string name="no_events">No Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="back_to_group_list">Back to Group List</string>
    <string name="joined_groups">Joined Groups</string>
    <string name="join_group">Join Group</string>
</resources>